# tardis-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
tardis_client/: __init__.py  channel.py  consts.py  data_downloader.py  handy.py  tardis_client.py  worker.py
tardis_client/reconstructors/: __init__.py  bitmex.py  market_reconstructor.py
tardis_dev/: __init__.py  _http.py  _options.py  channel.py  clear_cache.py  download_csv.py  download_datasets.py  get_exchange_details.py  instrument_info.py  replay.py
tardis_dev/datasets/: __init__.py  download.py
tests/: test_channel.py  test_clear_cache.py  test_download_datasets.py  test_get_exchange_details.py  test_http.py  test_imports.py  test_instrument_info.py  test_replay.py
