[tool.black]
line-length = 125

[tool.poetry]
name = "tardis-client"
version = "1.2.9"
description = "Python client for tardis.dev - historical tick-level cryptocurrency market data replay API."
readme = "README.md"
homepage = "https://github.com/tardis-dev/python-client"
license = "MPL-2.0"
authors = ["Thad <thad@tardis.dev>"]
keywords = [ 
    "cryptocurrency data feed",
    "market data",
    "api client",
    "orderbook",
    "crypto markets data replay",
    "historical data",
    "historical cryptocurrency prices",
    "cryptocurrency api"]

[tool.poetry.dependencies]
python = ">=3.7"
aiohttp = "^3.7.3"
aiofiles = "^0.4.0"
sortedcontainers = "^2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
