[tool.black]
line-length = 125

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: tests that call live tardis.dev endpoints",
]

[project]
name = "tardis-dev"
version = "3.4.0"
description = "Python client for tardis.dev - historical tick-level cryptocurrency market data replay API."
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = "MPL-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Thad", email = "thad@tardis.dev" },
]
keywords = [
    "cryptocurrency data feed",
    "market data",
    "api client",
    "orderbook",
    "crypto markets data replay",
    "historical data",
    "historical cryptocurrency prices",
    "cryptocurrency api",
]
dependencies = [
    "aiohttp>=3.10.0",
    "python-dateutil>=2.8.2,<3",
    "aiofiles>=24.1.0,<25",
    "zstandard>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/tardis-dev/tardis-python"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "aioresponses>=0.7.8,<0.8",
    "black>=24.4.2,<25",
]

[tool.uv]
exclude-newer = "7 days"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
